feat: add hot money action query api
